<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.sha.weather.app.viewmodel.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/weatherRootLayout">

        <!-- City EditText -->
        <EditText
            android:id="@+id/cityInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="locationCity"
            android:hint="@string/enter_city_name"
            android:layout_margin="16dp"
            android:inputType="text"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Search Button -->
        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintTop_toBottomOf="@id/cityInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Weather Information Title-->
        <TextView
            android:id="@+id/textViewWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_information"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/buttonSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Weather Information CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/weatherCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#E8F8F5"
            app:layout_constraintTop_toBottomOf="@id/textViewWeather">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- Location TextView -->
                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Date TextView -->
                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationTextView"
                    android:layout_marginTop="8dp"/>

                <!-- Weather Icon ImageView -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/weatherIconImageView"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@android:drawable/ic_menu_zoom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateTextView"
                    android:layout_marginTop="8dp" />

                <!-- Current Temperature TextView -->
                <TextView
                    android:id="@+id/currentTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weatherIconImageView"
                    android:layout_marginTop="8dp" />

                <!-- Weather Description TextView -->
                <TextView
                    android:id="@+id/weatherDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currentTempTextView"
                    android:layout_marginTop="8dp"/>

                <!-- Min and Max Temperature TextViews inside a LinearLayout -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weatherDescriptionTextView"
                    android:layout_marginTop="8dp">

                    <!-- Max Temperature TextView -->
                    <TextView
                        android:id="@+id/tempMaxTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp" />

                    <!-- Min Temperature TextView -->
                    <TextView
                        android:id="@+id/tempMinTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginEnd="8dp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>